# advent-of-code

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  advent_of_code.opam  build.zig  build.zig.zon  bun.lockb  display_runtimes.py  dune-project  go.mod  language-setup.sh  mix.exs  notes.md  package.json  pyproject.toml  pyrightconfig.json  run-year.sh  run.sh  settings.gradle.kts  tsconfig.json
2015/01/: solver.py
2015/02/: data.txt  solver.py
2015/03/: aoc_board.py  solver.py
2015/04/: aoc_board.py  solver.go  solver.py  solver.rs
2015/05/: sample.txt  solver.py
2015/06/: aoc_search.py  data.txt  sample.txt  solver.py  solver.rs
2015/07/: data.txt  sample.txt  solver.py
2015/08/: data.txt  solver.py
2015/09/: data.txt  sample.txt  solver.py
2015/10/: solver.py  solver.rs
2015/11/: aoc_computer.py  solver.py  solver.rs
2015/12/: sample.txt  solver.py
2015/13/: data.txt  solver.py  solver.rs
2015/14/: data.txt  sample.txt  solver.py
2015/15/: solver.py  solver.rs
2015/16/: data.txt  solver.py
2015/17/: data.txt  sample.txt  solver.py  solver.rs
2015/18/: data.txt  sample.txt  solver.py  solver.rs
2015/19/: aoc_util.py  data.txt  sample.txt  solver.py
2015/2/: sample.txt  solver.py
2015/20/: solver.py  solver.rs
2015/21/: data.txt  solver.py
2015/22/: aoc_search.py  aoc_util.py  solver.py  solver.rs
2015/23/: data.txt  sample.txt  solver.py
2015/24/: data.txt  dune  solver.ml  solver.py  solver.rs
2015/25/: solver.py  solver.rs
2015/3/: solver.py
2015/4/: solver.py
2015/5/: data.txt
2015/9/: solver.py
2016/01/: solver.py
2016/02/: solver.py
2016/03/: data.txt  solver.py
2016/04/: data.txt  solver.py
2016/05/: solver.go  solver.py  solver.rs
2016/06/: aoc_parser.py  data.txt  solver.py
2016/07/: solver.py
2016/08/: data.txt  solver.py
2016/09/: aoc_board.py  solver.py
2016/1/: solver.py
2016/10/: data.txt  solver.py
2016/11/: aoc_search.py  data.txt  sample.txt  solver.py
2016/12/: data.txt  solver.go  solver.py  solver.rs
2016/13/: solver.py
2016/14/: solver.go  solver.py  solver.rs
2016/15/: data.txt  sample.txt  solver.py  solver.rs
2016/16/: solver.py  solver.rs
2016/17/: aoc_search.py  solver.py
2016/18/: solver.py  solver.rs
2016/19/: solver.py  solver.rs
2016/2/: data.txt
2016/20/: data.txt  sample.txt  solver.py
2016/21/: data.txt  sample.txt  solver.py
2016/22/: data.txt  sample.txt  solver.py
2016/23/: aoc_computer.py  data.txt  sample.txt  solver.py
2016/24/: data.txt  solver.py
2016/25/: aoc_computer.py  data.txt  solver.py  solver.rs
2016/3/: solver.py
2016/4/: sample.txt
2016/6/: solver.py
2016/8/: sample.txt  solver.py
2016/9/: solver.py
2017/01/: solver.py
2017/02/: aoc_parser.py  data.txt  solver.py
2017/03/: solver.py  solver.rs
2017/04/: solver.py
2017/05/: data.txt  solver.py  solver.rs
2017/06/: data.txt  sample.txt  solver.py
2017/07/: aoc_board.py  solver.py
2017/08/: data.txt  solver.py
2017/09/: BalancedParens.java  aoc_parser.py  sample.txt  solver.py
2017/1/: aoc_board.py  solver.py
2017/10/: aoc_parser.py  sample.txt  solver.py
2017/11/: aoc_search.py  solver.py
2017/12/: aoc_search.py  sample.txt  solver.py
2017/13/: aoc_parser.py  data.txt  sample.txt  solver.py  solver.rs
2017/14/: solver.py  solver.rs
2017/15/: solver.py  solver.rs
2017/16/: solver.py  solver.rs
2017/17/: aoc_search.py  solver.py  solver.rs
2017/18/: data.txt  sample.txt  solver.py
2017/19/: aoc_board.py  data.txt  sample.txt  solver.py  solver.rs
2017/20/: data.txt  sample.txt  solver.py  solver.rs
2017/21/: data.txt  solver.py  solver.rs
2017/22/: aoc_board.py  data.txt  sample.txt  solver.py  solver.rs
2017/23/: data.txt  reasoning.md  reasoning.txt  solver.py
2017/24/: data.txt  sample.txt  solver.py  solver.rs
2017/25/: aoc_board.py  data.txt  sample.txt  solver.py  solver.rs
2017/3/: aoc_board.py  solver.py
2017/4/: solver.py
2017/5/: aoc_board.py  solver.py
2017/7/: data.txt
2017/8/: data.txt  solver.py
2018/01/: aoc_parser.py  solver.py
2018/02/: solver.py
2018/03/: data.txt  solver.py  solver.rs
2018/04/: data.txt  solver.py
2018/05/: solver.py  solver.rs
2018/06/: aoc_board.py  data.txt  solver.py  solver.rs
2018/07/: aoc_graph.py  aoc_parser.py  solver.py
2018/08/: aoc_parser.py  data.txt  solver.py
2018/09/: solver.py  solver.rs
2018/1/: data.txt  solver.py
2018/10/: aoc_board.py  data.txt  solver.py  solver.rs
2018/11/: aoc_board.py  solver.py  solver.rs
2018/12/: aoc_board.py  data.txt  sample.txt  solver.py
2018/13/: aoc_board.py  data.txt  solver.py  solver.rs
2018/14/: aoc_board.py  solver.py  solver.rs
2018/15/: aoc_board.py  data.txt  sample.txt  solver.py  solver.rs
2018/16/: aoc_board.py  data.txt  sample.txt  solver.py
2018/17/: aoc_board.py  data.txt  sample-2.txt  sample.txt  solver.py
2018/18/: aoc_board.py  data.txt  sample.txt  solver.py  solver.rs
2018/19/: data.txt  reasoning.md  solver.py
2018/2/: solver.py
2018/20/: aoc_board.py  solver.py
2018/21/: data.txt  reasoning.txt  solver.py
2018/22/: aoc_board.py  data.txt  solver.py  solver.rs
2018/23/: aoc_board.py  data.txt  other.py  sample.txt  solver.py
2018/24/: aoc_board.py  data.txt  solver.py  solver.rs
2018/25/: data.txt  solver.py  solver.rs
2018/3/: aoc_parser.py  grid.py  sample.txt
2018/5/: solver.py
2018/7/: data.txt  sample.txt
2018/8/: aoc_board.py  solver.py
2019/01/: data.txt  solver.py
2019/02/: solver.py  solver.rs
2019/03/: data.txt  sample.txt  solver.py  solver.rs
2019/04/: check_passwords.py  data.txt  solver.py  (+1 more)
buildSrc/: build.gradle.kts
commons/: answer.py  aoc_board.py  aoc_computer.py  aoc_parser.py  aoc_search.py
runner/: display_runtimes.py  language-setup.sh  language_factory.py  run.py  run.sh
scripts/: advent.py  generate.py  graph.py  requirements.txt  run.py
template/: generate.py
test-data/: group-ints.txt  group-strings.txt  int-csv.txt  int-lines.txt  string-lines.txt
(+650 files in other folders)
