[[bin]]
name = "aoc_2017_15"
path = "2017/15/solver.rs"

[[bin]]
name = "aoc_2017_17"
path = "2017/17/solver.rs"

[[bin]]
name = "aoc_2017_22"
path = "2017/22/solver.rs"

[[bin]]
name = "aoc_2017_25"
path = "2017/25/solver.rs"

[[bin]]
name = "aoc_2018_11"
path = "2018/11/solver.rs"

[[bin]]
name = "aoc_2018_14"
path = "2018/14/solver.rs"

[[bin]]
name = "aoc_2020_15"
path = "2020/15/solver.rs"

[[bin]]
name = "aoc_2021_01"
path = "2021/01/solver.rs"

[[bin]]
name = "aoc_2021_02"
path = "2021/02/solver.rs"

[[bin]]
name = "aoc_2022_01"
path = "2022/01/solver.rs"

[[bin]]
name = "aoc_2022_02"
path = "2022/02/solver.rs"

[[bin]]
name = "aoc_2022_03"
path = "2022/03/solver.rs"

[[bin]]
name = "aoc_2022_04"
path = "2022/04/solver.rs"

[[bin]]
name = "aoc_2022_05"
path = "2022/05/solver.rs"

[[bin]]
name = "aoc_2022_06"
path = "2022/06/solver.rs"

[[bin]]
name = "aoc_2022_07"
path = "2022/07/solver.rs"

[[bin]]
name = "aoc_2022_08"
path = "2022/08/solver.rs"

[[bin]]
name = "aoc_2022_09"
path = "2022/09/solver.rs"

[[bin]]
name = "aoc_2022_10"
path = "2022/10/solver.rs"

[[bin]]
name = "aoc_2022_11"
path = "2022/11/solver.rs"

[[bin]]
name = "aoc_2022_12"
path = "2022/12/solver.rs"

[[bin]]
name = "aoc_2022_13"
path = "2022/13/solver.rs"

[[bin]]
name = "aoc_2022_14"
path = "2022/14/solver.rs"

[[bin]]
name = "aoc_2022_15"
path = "2022/15/solver.rs"

[[bin]]
name = "aoc_2022_16"
path = "2022/16/solver.rs"

[[bin]]
name = "aoc_2022_17"
path = "2022/17/solver.rs"

[[bin]]
name = "aoc_2022_18"
path = "2022/18/solver.rs"

[[bin]]
name = "aoc_2022_19"
path = "2022/19/solver.rs"

[[bin]]
name = "aoc_2022_20"
path = "2022/20/solver.rs"

[[bin]]
name = "aoc_2022_21"
path = "2022/21/solver.rs"

[[bin]]
name = "aoc_2022_22"
path = "2022/22/solver.rs"

[[bin]]
name = "aoc_2022_23"
path = "2022/23/solver.rs"

[[bin]]
name = "aoc_2022_24"
path = "2022/24/solver.rs"

[[bin]]
name = "aoc_2022_25"
path = "2022/25/solver.rs"

[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
id_tree = "1.8.0"
itertools = "0.10.5"
md5 = "0.7.0"
nom = "7.1.1"
petgraph = "0.6.2"
priority-queue = "1.3.0"
queues = "1.0.2"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.aoc_lib]
path = "commons/rust/"
