[[bin]]
name = "aoc_2015_06"
path = "2015/06/solver.rs"

[[bin]]
name = "aoc_2015_10"
path = "2015/10/solver.rs"

[[bin]]
name = "aoc_2015_13"
path = "2015/13/solver.rs"

[[bin]]
name = "aoc_2015_18"
path = "2015/18/solver.rs"

[[bin]]
name = "aoc_2015_20"
path = "2015/20/solver.rs"

[[bin]]
name = "aoc_2016_05"
path = "2016/05/solver.rs"

[[bin]]
name = "aoc_2016_16"
path = "2016/16/solver.rs"

[[bin]]
name = "aoc_2016_18"
path = "2016/18/solver.rs"

[[bin]]
name = "aoc_2017_05"
path = "2017/05/solver.rs"

[[bin]]
name = "aoc_2017_15"
path = "2017/15/solver.rs"

[[bin]]
name = "aoc_2017_17"
path = "2017/17/solver.rs"

[[bin]]
name = "aoc_2017_22"
path = "2017/22/solver.rs"

[[bin]]
name = "aoc_2017_24"
path = "2017/24/solver.rs"

[[bin]]
name = "aoc_2017_25"
path = "2017/25/solver.rs"

[[bin]]
name = "aoc_2018_05"
path = "2018/05/solver.rs"

[[bin]]
name = "aoc_2018_06"
path = "2018/06/solver.rs"

[[bin]]
name = "aoc_2018_11"
path = "2018/11/solver.rs"

[[bin]]
name = "aoc_2018_14"
path = "2018/14/solver.rs"

[[bin]]
name = "aoc_2018_15"
path = "2018/15/solver.rs"

[[bin]]
name = "aoc_2018_18"
path = "2018/18/solver.rs"

[[bin]]
name = "aoc_2019_02"
path = "2019/02/solver.rs"

[[bin]]
name = "aoc_2019_09"
path = "2019/09/solver.rs"

[[bin]]
name = "aoc_2019_12"
path = "2019/12/solver.rs"

[[bin]]
name = "aoc_2019_13"
path = "2019/13/solver.rs"

[[bin]]
name = "aoc_2019_16"
path = "2019/16/solver.rs"

[[bin]]
name = "aoc_2019_19"
path = "2019/19/solver.rs"

[[bin]]
name = "aoc_2019_21"
path = "2019/21/solver.rs"

[[bin]]
name = "aoc_2019_25"
path = "2019/25/solver.rs"

[[bin]]
name = "aoc_2020_11"
path = "2020/11/solver.rs"

[[bin]]
name = "aoc_2020_15"
path = "2020/15/solver.rs"

[[bin]]
name = "aoc_2020_22"
path = "2020/22/solver.rs"

[[bin]]
name = "aoc_2020_23"
path = "2020/23/solver.rs"

[[bin]]
name = "aoc_2021_01"
path = "2021/01/solver.rs"

[[bin]]
name = "aoc_2021_02"
path = "2021/02/solver.rs"

[[bin]]
name = "aoc_2022_01"
path = "2022/01/solver.rs"

[[bin]]
name = "aoc_2022_02"
path = "2022/02/solver.rs"

[[bin]]
name = "aoc_2022_03"
path = "2022/03/solver.rs"

[[bin]]
name = "aoc_2022_04"
path = "2022/04/solver.rs"

[[bin]]
name = "aoc_2022_05"
path = "2022/05/solver.rs"

[[bin]]
name = "aoc_2022_06"
path = "2022/06/solver.rs"

[[bin]]
name = "aoc_2022_07"
path = "2022/07/solver.rs"

[[bin]]
name = "aoc_2022_08"
path = "2022/08/solver.rs"

[[bin]]
name = "aoc_2022_09"
path = "2022/09/solver.rs"

[[bin]]
name = "aoc_2022_10"
path = "2022/10/solver.rs"

[[bin]]
name = "aoc_2022_11"
path = "2022/11/solver.rs"

[[bin]]
name = "aoc_2022_12"
path = "2022/12/solver.rs"

[[bin]]
name = "aoc_2022_13"
path = "2022/13/solver.rs"

[[bin]]
name = "aoc_2022_14"
path = "2022/14/solver.rs"

[[bin]]
name = "aoc_2022_15"
path = "2022/15/solver.rs"

[[bin]]
name = "aoc_2022_16"
path = "2022/16/solver.rs"

[[bin]]
name = "aoc_2022_17"
path = "2022/17/solver.rs"

[[bin]]
name = "aoc_2022_18"
path = "2022/18/solver.rs"

[[bin]]
name = "aoc_2022_19"
path = "2022/19/solver.rs"

[[bin]]
name = "aoc_2022_20"
path = "2022/20/solver.rs"

[[bin]]
name = "aoc_2022_21"
path = "2022/21/solver.rs"

[[bin]]
name = "aoc_2022_22"
path = "2022/22/solver.rs"

[[bin]]
name = "aoc_2022_23"
path = "2022/23/solver.rs"

[[bin]]
name = "aoc_2022_24"
path = "2022/24/solver.rs"

[[bin]]
name = "aoc_2022_25"
path = "2022/25/solver.rs"

[[bin]]
name = "aoc_2023_17"
path = "2023/17/solver.rs"

[[bin]]
name = "aoc_2023_21"
path = "2023/21/solver.rs"

[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
id_tree = "1.8.0"
itertools = "0.12.0"
md5 = "0.7.0"
nom = "7.1.3"
petgraph = "0.6.4"
priority-queue = "1.3.2"
queues = "1.1.0"
regex = "1.10.2"
serde_json = "1.0.109"
strum = "0.25"

[dependencies.serde]
version = "1.0.193"
features = [ "derive",]

[dependencies.aoc_lib]
path = "commons/rust/"
