[[bin]]
name = "aoc_2015_04"
path = "2015/04/solver.rs"

[[bin]]
name = "aoc_2015_06"
path = "2015/06/solver.rs"

[[bin]]
name = "aoc_2015_10"
path = "2015/10/solver.rs"

[[bin]]
name = "aoc_2015_11"
path = "2015/11/solver.rs"

[[bin]]
name = "aoc_2015_13"
path = "2015/13/solver.rs"

[[bin]]
name = "aoc_2015_15"
path = "2015/15/solver.rs"

[[bin]]
name = "aoc_2015_18"
path = "2015/18/solver.rs"

[[bin]]
name = "aoc_2015_20"
path = "2015/20/solver.rs"

[[bin]]
name = "aoc_2015_25"
path = "2015/25/solver.rs"

[[bin]]
name = "aoc_2016_05"
path = "2016/05/solver.rs"

[[bin]]
name = "aoc_2016_14"
path = "2016/14/solver.rs"

[[bin]]
name = "aoc_2016_15"
path = "2016/15/solver.rs"

[[bin]]
name = "aoc_2016_16"
path = "2016/16/solver.rs"

[[bin]]
name = "aoc_2016_18"
path = "2016/18/solver.rs"

[[bin]]
name = "aoc_2016_25"
path = "2016/25/solver.rs"

[[bin]]
name = "aoc_2017_05"
path = "2017/05/solver.rs"

[[bin]]
name = "aoc_2017_13"
path = "2017/13/solver.rs"

[[bin]]
name = "aoc_2017_14"
path = "2017/14/solver.rs"

[[bin]]
name = "aoc_2017_15"
path = "2017/15/solver.rs"

[[bin]]
name = "aoc_2017_17"
path = "2017/17/solver.rs"

[[bin]]
name = "aoc_2017_20"
path = "2017/20/solver.rs"

[[bin]]
name = "aoc_2017_21"
path = "2017/21/solver.rs"

[[bin]]
name = "aoc_2017_22"
path = "2017/22/solver.rs"

[[bin]]
name = "aoc_2017_24"
path = "2017/24/solver.rs"

[[bin]]
name = "aoc_2017_25"
path = "2017/25/solver.rs"

[[bin]]
name = "aoc_2018_05"
path = "2018/05/solver.rs"

[[bin]]
name = "aoc_2018_06"
path = "2018/06/solver.rs"

[[bin]]
name = "aoc_2018_09"
path = "2018/09/solver.rs"

[[bin]]
name = "aoc_2018_10"
path = "2018/10/solver.rs"

[[bin]]
name = "aoc_2018_11"
path = "2018/11/solver.rs"

[[bin]]
name = "aoc_2018_14"
path = "2018/14/solver.rs"

[[bin]]
name = "aoc_2018_15"
path = "2018/15/solver.rs"

[[bin]]
name = "aoc_2018_18"
path = "2018/18/solver.rs"

[[bin]]
name = "aoc_2018_24"
path = "2018/24/solver.rs"

[[bin]]
name = "aoc_2019_02"
path = "2019/02/solver.rs"

[[bin]]
name = "aoc_2019_03"
path = "2019/03/solver.rs"

[[bin]]
name = "aoc_2019_04"
path = "2019/04/solver.rs"

[[bin]]
name = "aoc_2019_09"
path = "2019/09/solver.rs"

[[bin]]
name = "aoc_2019_11"
path = "2019/11/solver.rs"

[[bin]]
name = "aoc_2019_12"
path = "2019/12/solver.rs"

[[bin]]
name = "aoc_2019_13"
path = "2019/13/solver.rs"

[[bin]]
name = "aoc_2019_15"
path = "2019/15/solver.rs"

[[bin]]
name = "aoc_2019_16"
path = "2019/16/solver.rs"

[[bin]]
name = "aoc_2019_17"
path = "2019/17/solver.rs"

[[bin]]
name = "aoc_2019_18"
path = "2019/18/solver.rs"

[[bin]]
name = "aoc_2019_19"
path = "2019/19/solver.rs"

[[bin]]
name = "aoc_2019_21"
path = "2019/21/solver.rs"

[[bin]]
name = "aoc_2019_23"
path = "2019/23/solver.rs"

[[bin]]
name = "aoc_2019_24"
path = "2019/24/solver.rs"

[[bin]]
name = "aoc_2019_25"
path = "2019/25/solver.rs"

[[bin]]
name = "aoc_2020_11"
path = "2020/11/solver.rs"

[[bin]]
name = "aoc_2020_15"
path = "2020/15/solver.rs"

[[bin]]
name = "aoc_2020_19"
path = "2020/19/solver.rs"

[[bin]]
name = "aoc_2020_22"
path = "2020/22/solver.rs"

[[bin]]
name = "aoc_2020_23"
path = "2020/23/solver.rs"

[[bin]]
name = "aoc_2020_24"
path = "2020/24/solver.rs"

[[bin]]
name = "aoc_2020_25"
path = "2020/25/solver.rs"

[[bin]]
name = "aoc_2021_01"
path = "2021/01/solver.rs"

[[bin]]
name = "aoc_2021_02"
path = "2021/02/solver.rs"

[[bin]]
name = "aoc_2021_12"
path = "2021/12/solver.rs"

[[bin]]
name = "aoc_2021_19"
path = "2021/19/solver.rs"

[[bin]]
name = "aoc_2021_23"
path = "2021/23/solver.rs"

[[bin]]
name = "aoc_2022_01"
path = "2022/01/solver.rs"

[[bin]]
name = "aoc_2022_02"
path = "2022/02/solver.rs"

[[bin]]
name = "aoc_2022_03"
path = "2022/03/solver.rs"

[[bin]]
name = "aoc_2022_04"
path = "2022/04/solver.rs"

[[bin]]
name = "aoc_2022_05"
path = "2022/05/solver.rs"

[[bin]]
name = "aoc_2022_06"
path = "2022/06/solver.rs"

[[bin]]
name = "aoc_2022_07"
path = "2022/07/solver.rs"

[[bin]]
name = "aoc_2022_08"
path = "2022/08/solver.rs"

[[bin]]
name = "aoc_2022_09"
path = "2022/09/solver.rs"

[[bin]]
name = "aoc_2022_10"
path = "2022/10/solver.rs"

[[bin]]
name = "aoc_2022_11"
path = "2022/11/solver.rs"

[[bin]]
name = "aoc_2022_12"
path = "2022/12/solver.rs"

[[bin]]
name = "aoc_2022_13"
path = "2022/13/solver.rs"

[[bin]]
name = "aoc_2022_14"
path = "2022/14/solver.rs"

[[bin]]
name = "aoc_2022_15"
path = "2022/15/solver.rs"

[[bin]]
name = "aoc_2022_16"
path = "2022/16/solver.rs"

[[bin]]
name = "aoc_2022_17"
path = "2022/17/solver.rs"

[[bin]]
name = "aoc_2022_18"
path = "2022/18/solver.rs"

[[bin]]
name = "aoc_2022_19"
path = "2022/19/solver.rs"

[[bin]]
name = "aoc_2022_20"
path = "2022/20/solver.rs"

[[bin]]
name = "aoc_2022_21"
path = "2022/21/solver.rs"

[[bin]]
name = "aoc_2022_22"
path = "2022/22/solver.rs"

[[bin]]
name = "aoc_2022_23"
path = "2022/23/solver.rs"

[[bin]]
name = "aoc_2022_24"
path = "2022/24/solver.rs"

[[bin]]
name = "aoc_2022_25"
path = "2022/25/solver.rs"

[[bin]]
name = "aoc_2023_12"
path = "2023/12/solver.rs"

[[bin]]
name = "aoc_2023_14"
path = "2023/14/solver.rs"

[[bin]]
name = "aoc_2023_16"
path = "2023/16/solver.rs"

[[bin]]
name = "aoc_2023_17"
path = "2023/17/solver.rs"

[[bin]]
name = "aoc_2023_21"
path = "2023/21/solver.rs"

[[bin]]
name = "aoc_2023_23"
path = "2023/23/solver.rs"

[[bin]]
name = "aoc_2023_25"
path = "2023/25/solver.rs"

[[bin]]
name = "aoc_2024_06"
path = "2024/06/solver.rs"

[[bin]]
name = "aoc_2024_16"
path = "2024/16/solver.rs"

[[bin]]
name = "aoc_2024_20"
path = "2024/20/solver.rs"

[[bin]]
name = "aoc_2024_22"
path = "2024/22/solver.rs"

[[bin]]
name = "aoc_2024_23"
path = "2024/23/solver.rs"

[[test]]
name = "aoc_lib"
path = "commons/rust/tests/lib.rs"

[lib]
name = "aoc_lib"
path = "commons/rust/src/lib.rs"

[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
itertools = "0.14.0"
md5 = "0.7.0"
priority-queue = "2.1.1"
rand = "0.8.5"
rayon = "1.10.0"
